--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "format:lint": "npm run format && npm run lint",
-    "clear": "rimraf dist .parcel-cache"
+    "clear": "rimraf dist .parcel-cache",
+    "fix-parcel": "npx npm-force-resolutions && npm i && npm i"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
   },
   "license": "MIT",
   "dependencies": {
+    "node-sass": "^6.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
     "babel-eslint": "^10.1.0",
     "babel-preset-nano-react-app": "^0.1.0",
     "eslint": "^7.26.0",
@@ -24,7 +30,7 @@
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "parcel": "^2.0.0-alpha.3.2",
+    "parcel": "1.12.4",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2"
   },
